crates/compiler/src/tests/e2e/good/0417_struct_user/main.gom
#[derive(ToJson)]
struct User {
    name: string,
    age: int32,
    active: bool,
}

fn main() {
    let u = User { name: "Alice", age: 30, active: true };
    println(u.to_json());
}
