crates/compiler/src/tests/e2e/bad/0578_derive_to_json_unsupported/main.gom
#[derive(ToJson)]
struct User {
    name: string,
}

fn main() -> unit {
    ()
}
